--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
         "webpack-node-externals": "^3.0.0"
     },
     "dependencies": {
+        "mitt": "^3.0.0",
         "moment": "^2.29.3"
     }
 }
