--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
         "webpack-node-externals": "^3.0.0"
     },
     "dependencies": {
-        "mitt": "^3.0.0",
+        "@heroicons/vue": "^1.0.6",
         "moment": "^2.29.3"
     }
 }
