--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     },
     "dependencies": {
         "@heroicons/vue": "^1.0.6",
-        "moment": "^2.29.3"
+        "moment": "^2.29.3",
+        "vue-toastification": "^2.0.0-rc.5"
     }
 }
