--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
         "@vitejs/plugin-vue": "^3.0.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.1.2",
+        "laravel-echo": "^1.14.1",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
         "postcss": "^8.4.18",
+        "pusher-js": "^7.4.1",
         "tailwindcss": "^3.2.1",
         "vite": "^3.0.0",
         "vue": "^3.2.41",
